# asset-bundle-converter

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CLAUDE.md  Dockerfile  ENCODER-MOVED.md  README.md  ci-editmode-test.sh  ci-setup.sh  convert-asset-bundles-scene.sh  convert-asset-bundles.sh  convert-lods.sh  convert-wearables-asset-bundles.sh  generate-lod.sh  license.Dockerfile  windows-test-run-lods.bat  windows-test-run.bat
.ci/: Pulumi.yaml  index.ts  package-lock.json  package.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: docker-common.yml  docker-main.yml  docker-next.yml  docker-pr.yml  docker-release.yml  docker.yml  manual-build-conversion.yml  manual-deploy.yml  manual-lod-generation.yml  node.yml  pr.yml  push.yml
asset-bundle-converter/: .gitignore
asset-bundle-converter/Assets/: UniversalRenderPipelineGlobalSettings.asset  bafkreiafx6wf7w6yivoknuxwdn5qhi4ixw3zofz2g5nhr4a2wuyuvpguhe-lod-manifest.json  bafkreidudwlm33df2wpqvv4amaiorhcdatp77gf57cf6vidz5hnfipx244-lod-manifest.json  bafkreihqzlfr3pl2e2vlhkxjbso4gp52gkiw24fli4qsw3qqpt6wragckq-lod-manifest.json
asset-bundle-converter/Assets/AssetBundleConverter/: AssemblyInfo.cs  AssetBundleConverter.asmdef  AssetBundleConverter.cs  Config.cs  (+24 more)
asset-bundle-converter/ProjectSettings/: GraphicsSettings.asset  PackageManagerSettings.asset  Plugin4UnitySettings.asset  ProjectSettings.asset  QualitySettings.asset
asset-bundle-converter/UserSettings/: EditorUserSettings.asset
consumer-server/: .dockerignore  .env  .env.default  .eslintignore  .gitignore  README.md  jest.config.js  jest.e2e.config.js  package-lock.json  package.json  tsconfig.json
consumer-server/scripts/: verify-catalyst-glbs.js  verify-catalyst-glbs.sh
consumer-server/src/: bake-encoder-artifacts.ts  components.ts  e2e-conversion-test.README.md  e2e-conversion-test.ts  e2e-world-conversion.ts  index.ts  metrics.ts  migrate-to-canonical.ts  service.ts  test-conversion-common.ts  test-conversion-scene.ts  test-conversion.ts  types.ts  utils.ts
consumer-server/test/: components.ts  jest.setup.ts
docs/: ai-agent-context.md  technical-reference.md
encoder/: .gitignore  Cargo.toml  README.md  build.rs  package.json
encoder/baked-fixtures/: README.md
encoder/examples/: dump_class_tree.rs  dump_strings.rs
encoder/scripts/: deep-diff-unitypy.py  download-scenes.sh  mac-validate.py  regenerate-fixtures.sh  sweep-validate.py  validate-with-unitypy.py  verify-scenes.sh
encoder/src/: catalyst_client.rs  errors.rs  lib.rs  napi_surface.rs  scene_encoder.rs  types.rs
encoder/src/encode/: bc7.rs  bundle_assembler.rs  class_writers.rs  glb_parser.rs  gltf_material.rs  gltf_mesh.rs  material.rs  mesh.rs  mod.rs  serialized_file.rs  serialized_file_reader.rs  texture.rs  texture_writer.rs  type_tree.rs  type_tree_db.rs  typetree_fixture.rs  unityfs.rs  unityfs_writer.rs
encoder/tests/fixtures/: retry-after-cases.json
pixyz_plugin_2022.1.1.4/: com.unity.pixyz.api-win-1.0.1.tgz  com.unity.pixyz.commons-1.0.2.tgz  com.unity.pixyz.plugin4unity-1.0.1.tgz
scene-lod-entities-manifest-builder/: .env  .env.default  .eslintignore  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
scene-lod-entities-manifest-builder/src/: components.ts  index.ts  service.ts  types.ts
(+259 files in other folders)
